# github-activity-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-check.yml  cargo-publish.yml
src/: activities_printer.rs  cli.rs  github_client.rs  main.rs
